Fixing footer placement/overlap

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,15 +6,14 @@ html {
 body {
   padding-top: 80px;
   /* Margin bottom by footer height */
-  margin-bottom: 80px;
+  /* margin-bottom: 80px; */
   font-family: 'Open Sans', sans-serif;
 }
 
 .footer {
-  position: absolute;
-  bottom: 0;
   width: 100%;
   padding-top: 10px;
+  padding-bottom: 10px;
   /* Set the fixed height of the footer here */
   height: 80px;
 }
